# app/api/gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package api
 
+import (
+	"time"
+)
+
 // AuthRequest defines model for AuthRequest.
 type AuthRequest struct {
 	Email    string `json:"email"`
@@ -12,6 +16,18 @@ type AuthRequest struct {
 // Error defines model for Error.
 type Error struct {
 	Error string `json:"error"`
+}
+
+// Task defines model for Task.
+type Task struct {
+	Completed bool      `json:"completed"`
+	Content   string    `json:"content"`
+	CreatedAt time.Time `json:"created_at"`
+}
+
+// TaskCreateRequest defines model for TaskCreateRequest.
+type TaskCreateRequest struct {
+	Content string `json:"content"`
 }
 
 // Token defines model for Token.
@@ -35,6 +51,9 @@ type UserCreateRequest struct {
 
 // PostAuthJSONRequestBody defines body for PostAuth for application/json ContentType.
 type PostAuthJSONRequestBody = AuthRequest
+
+// PostTasksJSONRequestBody defines body for PostTasks for application/json ContentType.
+type PostTasksJSONRequestBody = TaskCreateRequest
 
 // PostUsersJSONRequestBody defines body for PostUsers for application/json ContentType.
 type PostUsersJSONRequestBody = UserCreateRequest
